# Events

./: .coveragerc  LICENSE  README.md  poetry.toml  pyproject.toml  scripts.py
.github/workflows/: publish.yml  verify.yml
py_events/: __init__.py  event.py  misc.py
tests/: test_event.py  test_readme.py
