[tool.poetry]
name = "py_events"
version = "0.1.0"
description = "Basic event system for python"
authors = ["Jordan Cottle <jordancottle622@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.2"

[tool.poetry.dev-dependencies]
pylint = "^2.9.6"
black = "^21.7b0"
pytest = "^6.2.4"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "-vv",
    "--stepwise",
]
log_cli = true
log_cli_level = "DEBUG"
testpaths = [
    "tests",
]

[tool.pylint.messages_control]
disable = """
logging-fstring-interpolation,
"""
